# seele-sys

./: Cargo.toml  build.rs  cbindgen.toml  seele_sys.h
src/: errors.rs  lib.rs  misc.rs  numbers.rs  permission.rs  signal.rs  syscalls.rs  utils.rs
src/abi/: framebuffer.rs  mod.rs  object.rs  socket.rs  time.rs
src/syscalls/: filesystem.rs  futex.rs  misc.rs  object.rs  polling.rs  signal.rs  socket.rs  timer.rs
