[package]
name = "seele-sys"
version = "0.1.8"
edition = "2024"

[dependencies]
num-traits = { version = "0.2", default-features = false }
num-derive = "0.4"
strum = { version = "0.28", default-features = false, features = ["derive"] }
num_enum = { version = "0.7.5", default-features = false }
paste = "1.0.15"
bitflags = "2.9.1"
